--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.7.7",
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.453.0",
